@@ -1,5 +1,7 @@
 2008-01-12  Andreas Kirschbaum
 
+	* Suppress spurious "level up" sound at re-login.
+
 	* Correctly display skills after re-login.
 
 	* Use "ragnorok" as default skin.
